--- a/cmdb/galaxy.yml
+++ b/cmdb/galaxy.yml
@@ -5,10 +5,10 @@
 namespace: uofuchpc
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: cmdb_bearer
+name: cmdb
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 1.0.0
+version: 0.0.1
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -16,12 +16,12 @@ readme: README.md
 # A list of the collection's content authors. Can be just the name or in the format 'Full Name <email> (url)
 # @nicks:irc/im.site#channel'
 authors:
-- Adam Griffith <adam.h.griffith@utah.edu>
+- UofU CHPC <helpdesk@chpc.utah.edu>
 
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
-description: your collection description
+description: A simple inventory plugin for a CMDB and bearer token.
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
