--- a/cmdb/galaxy.yml
+++ b/cmdb/galaxy.yml
@@ -21,7 +21,7 @@ authors:
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
-description: A simple inventory plugin for a CMDB and bearer token.
+description: A simple collection for a CMDB.
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
