--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           python3.9 -m pip install -r requirements.txt
 
       - name: Build the Ansible Collection
-        run: >-
+        run: |-
           mkdir ./build
           ansible-galaxy collection build -f . --output-path ./build
 
