--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/*.tar.gz"
-          body: "A simple collection for a CMDB."
+          body: "A simple Ansible Collection for a Content Management Database (CMDB)."
           name: Release ${{ env.RELEASE_VERSION }}
           tag: refs/tags/${{ env.RELEASE_VERSION }}
           prerelease: false
